@@ -99,6 +99,7 @@ typedef list<comp_clause> comp_clause_list;
 %token <fix>	FIX	"fixity"
 
 %token		DEF	"def"
+%token		CONST	"const"
 %token		LET	"let"
 %token		CASE	"case"
 %token		OF	"of"
@@ -276,7 +277,7 @@ item
 { action(interp.exec($1), delete $1); }
 | LET simple_rule
 { action(interp.define($2), delete $2); }
-| DEF simple_rule
+| CONST simple_rule
 { action(interp.define_const($2), delete $2); }
 | rule
 { rulel *rl = 0;
