@@ -1,5 +1,4 @@
-def false = 0;
-def true = 1;
+const false,true = 0,1;
 f/*0:01*/$x/*0:1*/ = f/*0:01*/ x/*0:1*/;
 (f/*0:001*/.g/*0:01*/) x/*0:1*/ = f/*0:001*/ (g/*0:01*/ x/*0:1*/);
 void _/*0:1*/ = ();
