@@ -1,4 +1,4 @@
-def pi = 4*atan 1.0;
+const pi = 4*atan 1.0;
 foo x/*0:1*/ = 3.14159265358979*x/*0:1*/;
 {
   rule #0: foo x = 3.14159265358979*x
